--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,9 @@ dependencies = [
     "coverage>=7.6.10",
     "pytest-cov>=6.0.0",
     "pytest-asyncio>=0.24.0",
-    "requests>=2.31.0", 
-    "fastapi>=0.115.5", 
+    "requests>=2.31.0",
+    "fastapi>=0.115.5",
+    "google-api-python-client>=2.156.0",
 ]
 
 [project.urls]
