--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "requests>=2.31.0",
     "fastapi>=0.115.5",
     "google-api-python-client>=2.156.0",
+    "freezegun>=1.5.1",
 ]
 
 [project.urls]
