--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -1,11 +1,11 @@
 services:
-  spoilbuster:
+  navimoderator:
     build:
       context: ../
       dockerfile: ./.devcontainer/dev.Dockerfile
     env_file:
       - ../.env
     volumes:
-      - ..:/workspaces/NaviModerator:cached
+      - ..:/workspaces/navimoderator:cached
     environment:
-      - PYTHONPATH=/workspaces/NaviModerator/src
+      - PYTHONPATH=/workspaces/navimoderator/src
