--- a/src/navimoderator/frontend/chrome_extension/manifest.json
+++ b/src/navimoderator/frontend/chrome_extension/manifest.json
@@ -12,6 +12,12 @@
     "host_permissions": [
       "https://www.googleapis.com/*"
     ],
+    "web_accessible_resources": [
+      {
+        "resources": ["config.js"],
+        "matches": ["<all_urls>"]
+      }
+    ],
     "background": {
       "service_worker": "background.js"
     },
@@ -19,5 +25,6 @@
       "default_popup": "popup.html",
       "default_icon": "icon.png"
     }
+    
   }
   
