--- a/src/navimoderator/frontend/chrome_extension/manifest.json
+++ b/src/navimoderator/frontend/chrome_extension/manifest.json
@@ -22,8 +22,7 @@
       "service_worker": "background.js"
     },
     "action": {
-      "default_popup": "popup.html",
-      "default_icon": "icon.png"
+      "default_popup": "popup.html"
     }
     
   }
