--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "NaviModerator"
+name = "NaviModerator-Chat-Monitoring"
 version = "0.0.1"
 description = "Add your description here"
 readme = "README.md"
@@ -51,4 +51,4 @@ ignore = ["E731","E741","F841","F821"]
 
 [tool.setuptools.packages.find]
 where = ["src"]
-include = ["navimoderator*"]
+include = ["navimoderator-chat-monitoring*"]
