--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,4 +51,4 @@ ignore = ["E731","E741","F841","F821"]
 
 [tool.setuptools.packages.find]
 where = ["src"]
-include = ["navimoderator-chat-monitoring*"]
+include = ["navimoderator*"]
