--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,6 @@ dependencies = [
     "openai>=1.35.13",
     "pandas>=2.2.3",
     "pydantic>=2.9.2",
-    "pypdf>=4.3.1",
     "tomli-w>=1.0.0",
     "tomli>=2.0.1",
     "jinja2>=3.1.4",
@@ -34,6 +33,9 @@ dependencies = [
     "fugashi>=1.4.0",
     "unidic-lite>=1.0.8",
     "twitchio>=2.10.0",
+    "websockets>=15.0.1",
+    "pytest>=8.3.4",
+    "uvicorn>=0.34.0",
 ]
 
 [tool.uv]
